- remove some of the messages once the list size reaches a certain limit - scroll the chat list to the bottom when a new message appears - fix some overflow issues in the chat list

--- a/Static/style.css
+++ b/Static/style.css
@@ -11,6 +11,11 @@ html, body {
     justify-content: space-between;
 }
 
+#ChatList {
+    overflow: auto;
+    height: 100%;
+}
+
 #ChatInputContainer {
     display: flex;
     flex-direction: row;
